--- a/views/login.pug
+++ b/views/login.pug
@@ -21,13 +21,11 @@ html(lang="en")
 		.container
 			if locals.flashes
 				.container
-					.flash-messages
 					- const categories = Object.keys(locals.flashes)
 						each category in categories
 							each message in flashes[category]
-								.flash(class=`flash--${category}`)
-									p.flash__text!= message
-									button.flash__remove(onClick="this.parentElement.remove()") &times;
+								.alert.alert-danger
+									p= message
 
 			form.form-signin(method="post")
 				label.sr-only(for="inputEmail") Email address
