--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,18 +11,22 @@ html
     link(rel="stylesheet", href="/font-awesome/css/font-awesome.min.css")
     // Ionicons
     link(rel="stylesheet", href="/Ionicons/css/ionicons.min.css")
+    link(rel="stylesheet", href="/select2/dist/css/select2.min.css")
     // Theme style
     link(rel="stylesheet", href="/dist/css/AdminLTE.min.css")
     //
       AdminLTE Skins. We have chosen the skin-blue for this starter
       page. However, you can choose any other skin. Make sure you
       apply the skin class to the body tag so the changes take effect.
-    link(rel="stylesheet", href="dist/css/skins/skin-blue.min.css")
+    link(rel="stylesheet", href="/dist/css/skins/skin-blue.min.css")
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
     //if lt IE 9
       script(src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js")
       script(src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js")
+    //other css
+    block css
+
     // Google Font
     link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic")
 
@@ -53,6 +57,8 @@ html
     script(src="/jquery/dist/jquery.min.js")
     // Bootstrap 3.3.7
     script(src="/bootstrap/dist/js/bootstrap.min.js")
-    
     // AdminLTE App
     script(src="/dist/js/adminlte.js")
+    //other js
+    block js
+
