--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -32,7 +32,7 @@ block header
                         a(href="#")
                           .pull-left
                             // User Image
-                            img.img-circle(src="dist/img/user2-160x160.jpg", alt="User Image")
+                            img.img-circle(src="/dist/img/user2-160x160.jpg", alt="User Image")
                           // Message title and timestamp
                           h4
                             | Support Team
@@ -96,15 +96,15 @@ block header
                 // Menu Toggle Button
                 a.dropdown-toggle(href="#", data-toggle="dropdown")
                   // The user image in the navbar
-                  img.user-image(src="dist/img/user2-160x160.jpg", alt="User Image")
+                  img.user-image(src="/dist/img/user2-160x160.jpg", alt="User Image")
                   // hidden-xs hides the username on small devices so only the image appears.
-                  span.hidden-xs Alexander Pierce
+                  span.hidden-xs #{user.name}
                 ul.dropdown-menu
                   // The user image in the menu
                   li.user-header
-                    img.img-circle(src="dist/img/user2-160x160.jpg", alt="User Image")
+                    img.img-circle(src="/dist/img/user2-160x160.jpg", alt="User Image")
                     p
-                      | Alexander Pierce - Web Developer
+                      | #{user.name}
                       small Member since Nov. 2012
                   // Menu Footer
                   li.user-footer
@@ -115,4 +115,4 @@ block header
               // Control Sidebar Toggle Button
               li
                 a(href="#", data-toggle="control-sidebar")
-                  i.fa.fa-gears
+                  i.fa.fa-users
