--- a/views/partials/side_nav.pug
+++ b/views/partials/side_nav.pug
@@ -5,29 +5,38 @@ block side_nav
           // Sidebar user panel (optional)
           .user-panel
             .pull-left.image
-              img.img-circle(src="dist/img/user2-160x160.jpg", alt="User Image")
+              img.img-circle(src="/dist/img/user2-160x160.jpg", alt="User Image")
             .pull-left.info
-              p Alexander Pierce
+              p #{user.name}
               // Status
               a(href="#")
                 i.fa.fa-circle.text-success
                 |  Online
           // search form (Optional)
-          form.sidebar-form(action="#", method="get")
+          form.sidebar-form(action="/search")
             .input-group
               input.form-control(type="text", name="q", placeholder="Search...")
               span.input-group-btn
-                button#search-btn.btn.btn-flat(type="submit", name="search")
+                button#search-btn.btn.btn-flat(type="submit")
                   i.fa.fa-search
           // /.search form
           // Sidebar Menu
           ul.sidebar-menu(data-widget="tree")
             li.header Menu
             // Optionally, you can add icons to the links
-            li
+            li.treeview
               a(href="/admin")
                 i.fa.fa-link
                 span Admin
+                span.pull-right-container
+                  i.fa.fa-angle-left.pull-right
+                ul.treeview-menu
+                  li
+                    a(href="/admin/students") students
+                  li
+                    a(href="/admin/teachers") teachers
+                  li
+                    a(href="/tags") tags
             li.active
               a(href="/")
                 i.fa.fa-link
@@ -49,7 +58,7 @@ block side_nav
                 i.fa.fa-link
                 span Library
             li
-              a(href="/magazine")
+              a(href="/courses")
                 i.fa.fa-link
-                span Magazine
+                span courses
           // /.sidebar-menu
