--- a/views/admin/students.pug
+++ b/views/admin/students.pug
@@ -1,48 +1,38 @@
 extends ../layout
 
 block content
-  h2 students page
-  form(method='post')
-    input(type='text' name='email') 
-    br
-    input(type='text' name='name')
-    br
-    input(type='password' name='password')
-    br
-    input(type='text' name='tags')
-    br
-    input(type='submit' value='save')
-  hr
-  //- if students
-  .box
-    .box-header
-      | Students table
-    .box-body 
-      table.table.table-hover(editable='true')
-        tbody
-            th name
-            th email
-            th options
-        each student in students
-          tr
-            td #{student.name}
-            td #{student.email}
-            td 
-              if student.status == 'active'
-                form(method='post' action=`students/${student._id}/lock` style="display: inline-block")
-                  input(type='submit' class="btn btn-sm" value='lock')
-              else
-                  form(method='post' action=`students/${student._id}/unlock`)
-                    input(type='submit' class="btn btn-sm" value='unlock')
-              button(data-toggle="modal" class="btn btn-sm" data-target="#myModal") edit
+  section.container-fluid
+    h2 students page
+    //- if students
+    .box
+      .box-header
+        | Students table
+      .box-body 
+        table.table.table-hover()
+          tbody
+              th name
+              th email
+              th options
+          each student in students
+            tr
+              td #{student.name}
+              td #{student.email}
+              td 
+                if student.status == 'active'
+                  form(method='post' action=`students/${student._id}/lock` style="display: inline-block")
+                    input(type='submit' class="btn btn-sm" value='lock')
+                else
+                    form(method='post' action=`students/${student._id}/unlock`)
+                      input(type='submit' class="btn btn-sm" value='unlock')
+                button(data-toggle="modal" class="btn btn-sm" data-target="#myModal") edit
 
-              div(class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel")
-                div(class="modal-dialog" role="document")
-                  .modal-content
-                    .modal-header
-                      button(type="button" class="close" data-dismiss="modal" aria-label="Close") x
-                      h4 edit student
-                    .modal-body
-                      p body
-                    .modal-footer
-                      button(type="button" class="btn btn-default" data-dismiss="modal") close
+                div(class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel")
+                  div(class="modal-dialog" role="document")
+                    .modal-content
+                      .modal-header
+                        button(type="button" class="close" data-dismiss="modal" aria-label="Close") x
+                        h4 edit student
+                      .modal-body
+                        p body
+                      .modal-footer
+                        button(type="button" class="btn btn-default" data-dismiss="modal") close
