--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -103,8 +103,7 @@ block header
                   // The user image in the menu
                   li.user-header
                     img.img-circle(src="/dist/img/user2-160x160.jpg", alt="User Image")
-                    p
-                      | #{user.name}
+                    p #{user.name}
                       small Member since Nov. 2012
                   // Menu Footer
                   li.user-footer
