--- a/views/partials/side_nav.pug
+++ b/views/partials/side_nav.pug
@@ -56,7 +56,7 @@ block side_nav
             li
               a(href="/courses")
                 i.fa.fa-link
-                span courses
+                span video courses
             li
               a(href="/contact")
                 i.fa.fa-link
