--- a/views/partials/side_nav.pug
+++ b/views/partials/side_nav.pug
@@ -37,6 +37,12 @@ block side_nav
                     a(href="/admin/teachers") teachers
                   li
                     a(href="/tags") tags
+                  li
+                    a(href="/admin/departments") departments
+                  li
+                    a(href="/admin/classes") classes
+                  li
+                    a(href="/admin/subjects") subjects
             li.active
               a(href="/")
                 i.fa.fa-link
