--- a/views/admin/deps.pug
+++ b/views/admin/deps.pug
@@ -4,6 +4,7 @@ block content
   section.container-fluid
       h1 Departments
       button.btn.btn-primary(data-toggle="modal" data-target="#myModal") new department
+      != h.dump(deps)
       .box
         .box-body 
           table.table.table-hover()
@@ -13,7 +14,8 @@ block content
             if deps.length > 0
               each dep in deps
                 tr
-                  td #{dep.name}
+                  td 
+                    a(href=`departments/${dep._id}`) #{dep.name}
                   td delete | edit
 
   #myModal.modal.fade(tabindex="-1", role="dialog", aria-labelledby="myModalLabel")
@@ -26,7 +28,8 @@ block content
           .modal-body
             form(method="post")
               .form-group
-                input.form-control(type="text" placeholder="create a new tag" name="name")
-                input.form-control.btn.btn-primary(type="submit")
+                input.form-control(type="text" placeholder="create a new department" name="name")
+              .form-group
+                input(type="submit", value="save")
           .modal-footer
             button.btn.btn-default(type="button", data-dismiss="modal") Close
