--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -96,15 +96,17 @@ block header
                 // Menu Toggle Button
                 a.dropdown-toggle(href="#", data-toggle="dropdown")
                   // The user image in the navbar
-                  img.user-image(src="/dist/img/user2-160x160.jpg", alt="User Image")
+                  img.user-image(src="/dist/img/user1-128x128.jpg", alt="User Image")
                   // hidden-xs hides the username on small devices so only the image appears.
-                  span.hidden-xs #{user.name}
+                  if user
+                    span.hidden-xs #{user.name}
                 ul.dropdown-menu
                   // The user image in the menu
                   li.user-header
-                    img.img-circle(src="/dist/img/user2-160x160.jpg", alt="User Image")
-                    p #{user.name}
-                      small Member since Nov. 2012
+                    img.img-circle(src="/dist/img/user1-128x128.jpg", alt="User Image")
+                    if user
+                      p #{user.name}
+                        small Member since Nov. 2012
                   // Menu Footer
                   li.user-footer
                     .pull-left
