--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    link(rel="icon" type="image/x-icon" href="/favicon.ico")
     title= title
     // Tell the browser to be responsive to screen width
     meta(content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", name="viewport")
